# segment-anything-rs

./: Cargo.toml  LICENSE  README.md
examples/: runseg.rs
src/: lib.rs
